[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "gtts>=2.5.4",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "python-dateutil>=2.9.0.post0",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
]
